--- a/css/styles.css
+++ b/css/styles.css
@@ -49,30 +49,33 @@ table {
 html {
   font-family: "Open Sans", Helvetica, sans-serif;
   font-size: 16px;
-  background-color: #fff;
   scroll-behavior: smooth; }
 
 body {
-  color: #3e3e3e; }
+  background-color: #e8eae3;
+  color: #373833; }
 
 h1 {
   font-size: 4rem;
   font-weight: 700;
-  color: #3e3e3e; }
+  color: #FA2742; }
 
 h2 {
   font-size: 2rem;
   font-weight: 700;
-  color: #3e3e3e; }
+  color: #FA2742; }
 
 a {
-  color: #fff;
+  color: #e8eae3;
   text-decoration: none;
   transition: all .4s; }
 
 a.inlineLink {
-  color: #3e3e3e;
+  color: #373833;
   text-decoration: underline; }
+
+a.inlineLink:hover {
+  color: #FA2742; }
 
 .animatedBorder {
   position: relative; }
@@ -80,7 +83,7 @@ a.inlineLink {
 .animatedBorder:after {
   content: '';
   position: absolute;
-  border-bottom: 1px solid #3e3e3e;
+  border-bottom: 1px solid #FA2742;
   bottom: 0;
   left: 0;
   right: 100%;
@@ -92,29 +95,29 @@ a.inlineLink {
 /*  Nav  */
 .navbarContainer {
   width: 100%;
-  border-bottom: 1px solid #3e3e3e; }
+  border-bottom: 1px solid #373833; }
   .navbarContainer .navbar {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 1rem 1rem;
+    padding: 1rem;
     font-weight: 400; }
     .navbarContainer .navbar .container-fluid {
       padding: 0; }
     .navbarContainer .navbar .navbar-brand {
-      color: #3e3e3e;
+      color: #373833;
       font-size: 1.25rem;
       padding: .5rem 0;
       margin: 0; }
     .navbarContainer .navbar .navbar-toggler-icon {
-      border-color: #3e3e3e;
+      border-color: #373833;
       display: flex;
       justify-content: center;
       align-items: center; }
       .navbarContainer .navbar .navbar-toggler-icon .fa-bars {
-        color: #3e3e3e;
+        color: #373833;
         font-size: 1.5rem; }
     .navbarContainer .navbar a.nav-link {
-      color: #3e3e3e;
+      color: #373833;
       font-size: 1.25rem;
       padding: .5rem 0.25rem !important;
       margin-left: 1.5rem; }
@@ -135,11 +138,13 @@ main {
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    padding: 1rem; }
+    padding: 1rem;
+    color: #373833; }
     main #landingAbout .morphing {
       width: 100%;
       font-size: 120px;
-      font-weight: 700; }
+      font-weight: 700;
+      color: #FA2742; }
       main #landingAbout .morphing .word {
         position: absolute;
         top: 50%;
@@ -179,7 +184,6 @@ main {
     main #projectsSection p {
       font-size: 1.5rem;
       text-align: center;
-      padding: 1.5rem 0 0 0;
       line-height: 2rem; }
     main #projectsSection .projectsContainer {
       width: 100%;
@@ -193,32 +197,34 @@ main {
         flex-direction: column;
         justify-content: space-between;
         height: 350px;
-        background-color: #3e3e3e;
-        color: #fff;
+        background-color: #373833;
+        color: #e8eae3;
         padding: 1.5rem;
+        border-radius: 6px;
         transition: all .4s; }
         main #projectsSection .projectsContainer .projectCard img {
           height: 70%; }
         main #projectsSection .projectsContainer .projectCard .cardInfoTop {
           display: flex;
           justify-content: space-between;
-          align-items: flex-start; }
+          align-items: center; }
           main #projectsSection .projectsContainer .projectCard .cardInfoTop h3 {
             font-weight: 600; }
           main #projectsSection .projectsContainer .projectCard .cardInfoTop a:hover {
-            color: #fff;
             transform: scale(1.3); }
           main #projectsSection .projectsContainer .projectCard .cardInfoTop i {
             font-size: 1.6rem; }
         main #projectsSection .projectsContainer .projectCard .cardInfoBottom {
           display: flex;
           justify-content: space-between;
-          align-items: flex-end; }
+          align-items: center; }
           main #projectsSection .projectsContainer .projectCard .cardInfoBottom p {
             font-size: .75rem;
             font-weight: 600; }
+          main #projectsSection .projectsContainer .projectCard .cardInfoBottom a {
+            color: #e8eae3; }
           main #projectsSection .projectsContainer .projectCard .cardInfoBottom a:hover {
-            color: #000; }
+            color: #FA2742; }
           main #projectsSection .projectsContainer .projectCard .cardInfoBottom i {
             font-size: 2rem; }
       main #projectsSection .projectsContainer .projectCard:hover {
@@ -241,12 +247,13 @@ main {
         align-items: center;
         margin: 0 auto;
         padding: 0 .25rem .5rem .25rem;
-        color: #3e3e3e; }
+        color: #373833; }
         main #aboutMeSection .aboutMeDescription a p {
           padding-left: .5rem;
           margin: 0; }
   main #skillsSection {
-    padding: 1rem; }
+    padding: 1rem;
+    margin-bottom: 10rem; }
     main #skillsSection h2 {
       padding-bottom: 2rem; }
     main #skillsSection .skills ul {
@@ -259,7 +266,7 @@ main {
 /*  Footer/Contact  */
 .footerContainer {
   width: 100%;
-  border-top: 1px solid #3e3e3e; }
+  border-top: 1px solid #373833; }
   .footerContainer footer {
     display: flex;
     justify-content: space-between;
@@ -270,7 +277,7 @@ main {
     .footerContainer footer .backToTop {
       display: flex;
       justify-content: space-between;
-      color: #3e3e3e; }
+      color: #373833; }
       .footerContainer footer .backToTop p {
         padding-left: .5rem; }
     .footerContainer footer .contactLinks {
@@ -278,11 +285,12 @@ main {
       justify-content: space-between;
       font-size: 1.5rem; }
       .footerContainer footer .contactLinks a {
-        color: #3e3e3e;
+        color: #373833;
         font-size: 2rem;
         padding-left: .9rem; }
       .footerContainer footer .contactLinks a:hover {
-        transform: scale(1.1); }
+        transform: scale(1.1);
+        color: #FA2742; }
 
 /*  Media Queries  */
 @media screen and (max-width: 767px) {
@@ -353,7 +361,7 @@ main {
       display: flex;
       justify-content: space-between; }
       .footerContainer footer .contactLinks a {
-        color: #3e3e3e;
+        color: #373833;
         font-size: 3rem;
         padding: 1rem; } }
 @media screen and (min-width: 768px) {
