--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,5 @@
-$primary-color: #fff;
-$primary-accent: #3e3e3e;
+$primary-color: #e8eae3;
+$primary-accent: #373833;
+$secondary-accent: #FA2742;
 
 $primary-font: 'Open Sans', Helvetica, sans-serif;
