--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -145,6 +145,9 @@ main {
             }
         }
         .landingAboutDescription {
+            z-index: 99;
+            background-color: $primary-color;
+            padding-bottom: 2rem;
             font-size: 80px;
             font-weight: 400;
             line-height: 100px;
